# freopen_stdin_stdout

./: CMakeLists.txt  README.md  main.cpp
